--- a/game_logic/package.json
+++ b/game_logic/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "driver.js": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "zustand": "^4.4.7"
@@ -30,4 +31,3 @@
     "vite": "^5.0.8"
   }
 }
-
