Add Vercel Analytics for visitor tracking

--- a/game_logic/package.json
+++ b/game_logic/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.6.1",
     "driver.js": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
